# Lab-2_1-Yaroslav-GERASIMCHUK

./: CMakeLists.txt  Dockerfile  railway.json
src/: main.cpp
